--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Bike Rental</title>
+</head>
+<body>
+    <h1>Welcome to the Bike Rental Prediction App</h1>
+    <p>This is your Flask app deployed on Render 🎉</p>
+</body>
+</html>
 
